syntax = "proto3";

package com.atoss.atc.protobuf;

import "google/protobuf/timestamp.proto";

service AbsencesService {
  rpc getSingleDayAbsences (AbsencesRequest)
    returns (stream Absence);
}

message AbsencesRequest {
  repeated string employee_ids = 3;
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
  repeated int32 account_ids = 4;
  int32 plan_version = 5;
  Options options = 6;

  message Options {
    bool include_planned = 1;
    bool pure_records = 2;
    bool add_bookings = 3;
    bool respect_account_settings = 4;
    bool single_days_of_complete_absence_period = 5;
    bool all_linked = 6;
    bool return_unrated_absences = 7;
    bool add_interval_timestamps = 8;
    bool respect_all_booking_attributes = 9;
  }
}

message Absence {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
  int32 account_id = 3;
  string employee_id = 4;
  double weight_start = 5;
  double weight_end = 6;
  int32 plan_version = 7;
  string remark = 8;
  string application = 9;
  string substitute = 10;
  int32 state = 11;
  string display_token = 12;
  string description = 13;
  int32 display_color = 14;
  int32 text_color = 15;
  google.protobuf.Timestamp date = 16;
  google.protobuf.Timestamp time = 17;
}
